--- a/server.properties
+++ b/server.properties
@@ -1,8 +1,12 @@
+#Minecraft server properties
+#Sat Aug 24 03:22:47 UTC 2019
+broadcast-rcon-to-ops=true
 view-distance=10
 max-build-height=256
 server-ip=0.0.0.0
 level-seed=
-gamemode=0
+rcon.port=25575
+gamemode=survival
 enable-command-block=true
 allow-nether=true
 server-port=25566
@@ -15,7 +19,9 @@ generator-settings=
 resource-pack=
 level-name=world
 player-idle-timeout=0
+rcon.password=
 motd=\u00A7bTrotbox\!\n
+query.port=25565
 debug=false
 force-gamemode=false
 hardcore=false
@@ -26,9 +32,10 @@ spawn-npcs=true
 generate-structures=true
 spawn-animals=true
 snooper-enabled=true
-difficulty=2
+difficulty=normal
+function-permission-level=2
 network-compression-threshold=256
-level-type=
+level-type=default
 max-tick-time=60000
 spawn-monsters=true
 enforce-whitelist=true
